# pyrepogen

./: .gitignore  AUTHORS  CHANGELOG.md  Makefile  README.md  TODO.md  conftest.py  gen_repo.cfg  gen_repo.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
pyrepogen/: __init__.py  __main__.py  clean.py  cli.py  cloud.py  colreqs.py  exceptions.py  formatter.py  logger.py  meldformat.py  mod1.py  prepare.py  pygittools.py  release.py  reltools.py  repoassist_cli.py  repoassist_main.py  settings.py  utils.py  wizard.py
pyrepogen/templates/: .gitignore  .gitignore.j2  AUTHORS_prepared.md.j2  Makefile  Makefile.j2  Makefile_base.j2  Makefile_package  Makefile_standalone  Makefile_standalone_base  __init__.py  __init__.py.j2  cloud_credentials.txt.j2  gen_repo.cfg  gen_repo.cfg.j2  requirements-dev.txt  requirements-dev.txt.j2  sample_standalone.py  sample_standalone_test.py  setup.cfg  setup.cfg.j2  setup_standalone.cfg  tox.ini  tox.ini.j2  tox_package.ini  tox_standalone.ini
pyrepogen/templates/module/: Makefile_base.j2  sample.py.j2  sample_test.py  sample_test.py.j2  tox.ini.j2
pyrepogen/templates/package/: Makefile  Makefile_base  Makefile_base.j2  __init__.py.j2  __main__.py  cli.py  cli.py.j2  modulo.py.j2  tox.ini.j2
pyrepogen/templates/package/tests/: modulo_test.py.j2  package_test.py
repoassist/: __init__.py  __main__.py  clean.py  cli.py  colreqs.py  exceptions.py  prepare.py  pygittools.py  release.py  reltools.py  repoassist_main.py  settings.py  utils.py  wizard.py
repoassist/templates/: cloud_credentials.txt.j2
repoassist/templates/module/: Makefile.j2  tox.ini.j2
repoassist/templates/package/: __init__.py.j2  __main__.py.j2
tests/: clean_test.py  cli_test.py  colreqs_test.py  prepare_test.py  release_test.py  utils_test.py
tests/tests_setups/cli_test/test_cli_SHOULD_generate_repo_properly_from_config_in_cwd/: gen_repo.cfg
tests/tests_setups/cli_test/test_update_SHOULD_update_repoassit_properly/: setup.cfg
tests/tests_setups/colreqs_test/: mod.py
tests/tests_setups/colreqs_test/test_collect_reqs_latest_SHOULD_exclude_repoassist_reqs_properly/repoassist/: __main__.py  colreqs.py
tests/tests_setups/release_test/test_clean_filed_release/: CHANGELOG.md
tests/tests_setups/utils_test/test_get_repo_config_from_setup_cfg_SHOULD_read_config_properly/: setup.cfg
tests/tests_setups/utils_test/test_read_repo_config_file_SHOULD_raise_error_when_no_field/: gen_repo.cfg
tests/tests_setups/utils_test/test_read_repo_config_file_SHOULD_read_config_properly/: gen_repo.cfg
tests/tests_setups/utils_test/test_read_setup_cfg_SHOULD_read_config_properly/: setup.cfg
