[metadata]
name = pyrepogen

author = Damian Pala
author-email = mail@damianpala.com
maintainer = Damian Pala
maintainer-email = mail@damianpala.com
summary = The Python Repository Generator.
description-file = README.md
home-page = None
license = TBD
classifier =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: TBD
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    pyrepogen

[files]
packages =
    pyrepogen

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain


[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[tool:pytest]
norecursedirs = . .svn _build tmp* lib/third lib *.egg bin distutils build docs demo
python_files = *.py
addopts = -p no:xdist --tb=long --capture=fd -rxX  --maxfail=10
# --durations=3    report the top 3 longest tests

# these are important for distributed testing, to speedup their execution we minimize what we sync
;rsyncdirs = . your_package_name
rsyncignore = .hg .git
pep8ignore = E501 E265 E127 E128 E402

[flake8]
exclude = migrations,__pycache__,build,bmll/config.py,env,src,.tox
# the only additional ignores are the docstrings ones Dxx, the other.
# ones are the default ones.
# see http://pep8.readthedocs.io/en/latest/intro.html
max-line-length=120
