[metadata]
name = pyrepogen
author = Damian Pala
author-email = mail@damianpala.com
maintainer = 
maintainer-email = 
summary = The Python Repository Generator.
description-file = README.md
home-page = 
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
keywords = 
    pyrepogen

[pbr]
skip_changelog = 1
skip_authors = 1

[pyrepogen]
# Possible values: package or module
project-type = package
repo-name = pyrepogen
# Possible values: generated or prepared
changelog-type = generated
# Possible values: generated or prepared
authors-type = generated
# Ignore directories for requirements discovery
pipreqs-ignore =
    repoassist
    pyrepogen/templates

[options]


[files]


[entry_points]
console_scripts =
    pyrepogen = pyrepogen.__main__:main

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[tool:pytest]
norecursedirs = . .svn _build tmp* lib/third lib *.egg bin distutils build docs demo
python_files = *.py
addopts = -p no:xdist --tb=long --capture=fd -rxX  --maxfail=10
# --durations=3    report the top 3 longest tests

# these are important for distributed testing, to speedup their execution we minimize what we sync
;rsyncdirs = . your_package_name
rsyncignore = .hg .git
pep8ignore = E501 E265 E127 E128 E402

[flake8]
exclude = migrations,__pycache__,build,bmll/config.py,env,src,.tox,repoassist
# the only additional ignores are the docstrings ones Dxx, the other.
ignore = D, H306
max-line-length=119

# Following lines refers to autopep8
max_line_length=119
aggressive=2
experimental=1

[coverage:report]
exclude_lines =
    logger
omit =
    tests/*
    pyrepogen/templates/*
