[metadata]
name = sample_project
author = Damian
author-email = damian@mail.com
maintainer = Mike
maintainer-email = mike@mail.com
summary = This is a sample project.
description-file = README.md
home-page = page.com
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
keywords = 
    sample_project
    
[pyrepogen]
# Possible values: package or script
project-type = script
repo-name = sample-repo
# Possible values: generated or prepared
changelog-type = generated

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[tool:pytest]
norecursedirs = . .svn _build tmp* lib/third lib *.egg bin distutils build docs demo
python_files = *.py
addopts = -p no:xdist --tb=long --capture=fd -rxX  --maxfail=10
# --durations=3    report the top 3 longest tests

# these are important for distributed testing, to speedup their execution we minimize what we sync
;rsyncdirs = . your_package_name
rsyncignore = .hg .git
pep8ignore = E501 E265 E127 E128 E402

[flake8]
exclude = migrations,__pycache__,build,bmll/config.py,env,src,.tox
# the only additional ignores are the docstrings ones Dxx, the other.
ignore = D, H306
max-line-length=119

# Following lines refers to autopep8
max_line_length=119
aggressive=2
experimental=1